Fixed the alignment of the container to be left instead of centered

--- a/gems/core/static/css/styles.css
+++ b/gems/core/static/css/styles.css
@@ -330,3 +330,7 @@ th.survey-date{
 .error-msg-indent{
     padding-left: 20px;
 }
+
+.container-left{
+    margin-left: 0;
+}
